--- a/comparisons.html
+++ b/comparisons.html
@@ -75,6 +75,8 @@
       </div>
 
 
+
+
       <div class="flex-jsb-c gap-8">
         <div class="flex-js-c gap-4">
           <div class="flex-js-c gap-4">
@@ -226,6 +228,28 @@
       <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Все характеристики</button>
       <button class="text-[#6E6E6E] px-4 h-10 bg-white border rounded-[30px]">Только различия</button>
     </div>
+
+
+    <table>
+      <tbody>
+      <tr class="border-b">
+        <td class="pb-4">
+          <div class="px-[30px] relative">
+            <img src="img/products/product2.png" alt="product" class="w-[80%]">
+            <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+            <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
+          </div>
+        </td>
+        <td class="pb-4">
+          <div class="px-[30px] relative">
+            <img src="img/products/product2.png" alt="product" class="w-[80%]">
+            <h4 class="text-[18px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h4>
+            <img src="img/icons/xmark.svg" alt="close" class="absolute right-0 top-0 cursor-pointer">
+          </div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
 
     <div class="w-full mt-10 grid grid-cols-12 border-b pb-2">
       <div class="col-span-3 xl:col-span-2">
