--- a/profile-view-history.html
+++ b/profile-view-history.html
@@ -214,7 +214,7 @@
   <div class="w-full mt-6">
 
     <div class="w-full grid grid-cols-12 gap-[30px]">
-      <div class="col-span-3">
+      <div class="col-span-3 hidden lg:block">
         <div class="w-full border-r pr-[30px]">
           <h4 class="text-[18px] font-medium">Здравствуйте,</h4>
           <h5 class="text-[32px] font-medium pl-4">Сергей</h5>
@@ -326,12 +326,15 @@
         </div>
       </div>
 
-      <div class="col-span-9">
+      <div class="col-span-12 lg:col-span-9">
 
-        <h1 class="text-[32px] font-medium mb-[30px]">Мои заказы</h1>
+        <div class="flex-js-c gap-4 mb-6 md:mb-[30px]">
+          <img src="img/icons/arrow-right.svg" alt="" class="transform rotate-180 block md:hidden" width="10">
+          <h1 class="text-[24px] sm:text-[32px] font-medium">История просмотров</h1>
+        </div>
 
         <div class="w-full lg:max-w-[670px] mb-[45px]">
-          <div class="w-full grid grid-cols-2 gap-x-[30px] gap-y-4">
+          <div class="w-full grid grid-cols-1 sm:grid-cols-2 gap-x-[30px] gap-y-4">
             <label class="w-full">
               <span class="block text-[#323232] mb-1">Выбрать период</span>
               <input type="date" class="w-full pl-2 h-[54px] rounded-[8px] border border-[#6E6E6E40]" placeholder="Выберите период">
@@ -341,11 +344,11 @@
 
         <div class="w-full relative mb-[30px]">
           <hr>
-          <span class="text-[20px] text-[#6E6E6E] px-6 bg-white absolute left-1/2 top-[-17px] transform translate-x-[-50%]">Вчера</span>
+          <span class="text-[16px] sm:text-[20px] text-[#6E6E6E] px-6 bg-white absolute left-1/2 top-[-11px] sm:top-[-17px] transform translate-x-[-50%]">Вчера</span>
         </div>
 
 
-        <div class="w-full grid grid-cols-4 gap-[30px]">
+        <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-[30px]">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
               <div class="absolute top-2 right-2 flex-je-c gap-2">
@@ -676,11 +679,11 @@
 
         <div class="w-full relative my-[30px]">
           <hr>
-          <span class="text-[20px] text-[#6E6E6E] px-6 bg-white absolute left-1/2 top-[-17px] transform translate-x-[-50%]">12 апреля 2025</span>
+          <span class="text-[16px] sm:text-[20px] text-[#6E6E6E] px-6 bg-white absolute left-1/2 top-[-11px] sm:top-[-17px] transform translate-x-[-50%]">12 апреля 2025</span>
         </div>
 
 
-        <div class="w-full grid grid-cols-4 gap-[30px]">
+        <div class="w-full grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-[30px]">
           <div class="w-full">
             <div class="w-full h-[427px] border rounded-[16px] relative">
               <div class="absolute top-2 right-2 flex-je-c gap-2">
