--- a/product-card.html
+++ b/product-card.html
@@ -274,7 +274,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="block xl:hidden">
         <h1 class="text-[32px] font-medium mb-1 tracking-[-0.64px] leading-[32px]">Воблер для рыбалки глубоководный Jaxon Diver DR 12 см 28 гр #U</h1>
 
         <div class="flex-js-c">
@@ -363,7 +363,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="block xl:hidden">
         <h3 class="text-[18px] font-semibold mt-8 mb-3">Рабочая длинна, см</h3>
 
         <div class="w-full flex-js-c gap-2 flex-wrap">
